--- a/index.html
+++ b/index.html
@@ -79,7 +79,7 @@
         yesButton.style.width = `${buttonWidth}px`;
         yesButton.style.fontSize = `${fontSize}px`; // Update font size
         if (noClickCount < 6) {
-          noButton.textContent = ["No", "Are you sure?", "Pookie please", "Don't do this to me :(", "You're breaking my heart", "I'm gonna cry..."][noClickCount];
+          noButton.textContent = ["No", "Are you sure?", "kierah please D: ", "Please click yes?", "kierah i beg D:", "KIERAH IM BEGGING D:"][noClickCount];
         }
       }
     });
